# Copyright (C) 2019 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("dejaview.gni")

dejaview_integrationtests_targets = [
  "src/shared_lib/test:integrationtests",
]

if (enable_dejaview_ipc && enable_dejaview_system_consumer) {
  dejaview_integrationtests_targets += [
    "src/tracing/test:tracing_integration_test",
  ]
}

# This test requires extra data files that are not easily available in Android
# builds.
# TODO(lalitm): looks like they don't work on standalone Android either because
# run_android_test doesn't push the test data.
if (enable_dejaview_trace_processor && dejaview_build_standalone) {
  dejaview_integrationtests_targets +=
      [ "src/trace_processor:integrationtests" ]
}

if (dejaview_build_standalone) {
  dejaview_integrationtests_targets +=
      [ "src/trace_redaction:integrationtests" ]
}
