# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../gn/dejaview_python.gni")

dejaview_py_library("trace_processor_table_generator") {
  sources = [
    "generators/trace_processor_table/public.py",
    "generators/trace_processor_table/serialize.py",
    "generators/trace_processor_table/util.py",
  ]
}

dejaview_py_library("trace_processor_stdlib_docs") {
  sources = [
    "generators/sql_processing/docs_extractor.py",
    "generators/sql_processing/docs_parse.py",
    "generators/sql_processing/utils.py",
  ]
}

dejaview_py_library("trace_processor_diff_tests") {
  sources = [
    "generators/diff_tests/runner.py",
    "generators/diff_tests/testing.py",
    "generators/diff_tests/utils.py",
  ]
}

dejaview_py_binary("trace_processor_py_example") {
  sources = [ "example.py" ]
  deps = [
    ":trace_processor_py",
    "../gn:pandas_py",
  ]
  main = "example.py"
}

dejaview_py_library("common") {
  sources = [
    "dejaview/common/exceptions.py",
    "dejaview/common/query_result_iterator.py",
  ]
}

dejaview_py_library("trace_processor_py_no_resolvers") {
  sources = [
    "dejaview/trace_processor/__init__.py",
    "dejaview/trace_processor/api.py",
    "dejaview/trace_processor/http.py",
    "dejaview/trace_processor/platform.py",
    "dejaview/trace_processor/protos.py",
    "dejaview/trace_processor/shell.py",
  ]
  data = [
    "dejaview/trace_processor/trace_processor.descriptor",
    "dejaview/trace_processor/metrics.descriptor",
    "..:trace_processor_shell",
  ]
  deps = [
    ":common",
    ":trace_uri_resolver",
    "../gn:pandas_py",
    "../gn:protobuf_py",
    "../gn:tp_vendor_py",
  ]
}

dejaview_py_library("trace_processor_py") {
  deps = [
    ":trace_processor_py_no_resolvers",
    "../gn:tp_resolvers_py",
  ]
}

dejaview_py_library("trace_uri_resolver") {
  sources = [
    "dejaview/trace_uri_resolver/__init__.py",
    "dejaview/trace_uri_resolver/path.py",
    "dejaview/trace_uri_resolver/registry.py",
    "dejaview/trace_uri_resolver/resolver.py",
    "dejaview/trace_uri_resolver/util.py",
  ]
}

dejaview_py_library("experimental_slice_breakdown_lib") {
  sources = [
    "dejaview/experimental/slice_breakdown/__init__.py",
    "dejaview/experimental/slice_breakdown/breakdown.py",
  ]
  deps = [ ":trace_processor_py" ]
}

dejaview_py_binary("experimental_slice_breakdown_bin") {
  sources = [ "tools/slice_breakdown.py" ]
  main = "tools/slice_breakdown.py"
  deps = [
    ":experimental_slice_breakdown_lib",
    ":trace_processor_py",
    "../gn:pandas_py",
  ]
}

dejaview_py_library("batch_trace_processor") {
  sources = [
    "dejaview/batch_trace_processor/__init__.py",
    "dejaview/batch_trace_processor/api.py",
    "dejaview/batch_trace_processor/platform.py",
  ]
  deps = [
    ":trace_processor_py",
    "../gn:pandas_py",
    "../gn:tp_vendor_py",
  ]
}

dejaview_py_library("sql_processing") {
  sources = [
    "generators/sql_processing/docs_extractor.py",
    "generators/sql_processing/docs_parse.py",
    "generators/sql_processing/utils.py",
  ]
}
